# SymboMath

./: CMakeLists.txt  LICENSE.md  README.md
include/symbo/: component.hpp  error.hpp  function.hpp  lexer.hpp  number.hpp  parser.hpp  respectTo.hpp  symbo.hpp  types.hpp  variable.hpp
include/symbo/operators/: binaryOperator.hpp  operatorAcos.hpp  operatorAcosh.hpp  operatorAdd.hpp  operatorAsin.hpp  operatorAsinh.hpp  operatorAtan.hpp  operatorAtanh.hpp  operatorCos.hpp  operatorCosh.hpp  operatorDiv.hpp  operatorExp.hpp  operatorLog.hpp  operatorLog10.hpp  operatorLog2.hpp  operatorMul.hpp  operatorNegate.hpp  operatorPow.hpp  operatorSin.hpp  operatorSinh.hpp  operatorSqrt.hpp  operatorSub.hpp  operatorTan.hpp  operatorTanh.hpp  unaryOperator.hpp
src/: component.cpp  error.cpp  function.cpp  lexer.cpp  number.cpp  parser.cpp  respectTo.cpp  symbo.cpp  types.cpp  variable.cpp
src/operators/: operatorAcos.cpp  operatorAcosh.cpp  operatorAdd.cpp  operatorAsin.cpp  operatorAsinh.cpp  operatorAtan.cpp  operatorAtanh.cpp  operatorCos.cpp  operatorCosh.cpp  operatorDiv.cpp  operatorExp.cpp  operatorLog.cpp  operatorLog10.cpp  operatorLog2.cpp  operatorMul.cpp  operatorNegate.cpp  operatorPow.cpp  operatorSin.cpp  operatorSinh.cpp  operatorSqrt.cpp  operatorSub.cpp  operatorTan.cpp  operatorTanh.cpp
